--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,9 @@
         "php": "^8.1",
         "blade-ui-kit/blade-heroicons": "^2.1",
         "brunocfalcao/blade-feather-icons": "^3.0",
+        "codeat3/blade-google-material-design-icons": "^1.18",
+        "codeat3/blade-grommet-icons": "^1.8",
+        "codeat3/blade-phosphor-icons": "^2.0",
         "cviebrock/eloquent-sluggable": "^10.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
