--- a/composer.json
+++ b/composer.json
@@ -2,23 +2,25 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "keywords": [
+        "laravel",
+        "framework"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.1",
         "blade-ui-kit/blade-heroicons": "^2.1",
         "brunocfalcao/blade-feather-icons": "^3.0",
-        "codeat3/blade-google-material-design-icons": "^1.18",
-        "codeat3/blade-grommet-icons": "^1.8",
-        "codeat3/blade-phosphor-icons": "^2.0",
         "cviebrock/eloquent-sluggable": "^10.0",
         "guzzlehttp/guzzle": "^7.2",
+        "itsgoingd/clockwork": "^5.1",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "spatie/laravel-sluggable": "^3.5"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.9",
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.21",
         "laravel/pint": "^1.0",
